<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".TelaPrincipal">

    <Button
        android:id="@+id/bt_gravarDadosDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:padding="15dp"
        android:text="@string/text_button_logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editnome"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@color/gray"
        android:ems="12"
        android:hint="@string/first_text_data"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/loginToolbar"
        app:layout_constraintTop_toBottomOf="@+id/emailFields" />

    <EditText
        android:id="@+id/editpeso"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@color/gray"
        android:ems="12"
        android:hint="@string/second_text_data"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/loginToolbar"
        app:layout_constraintTop_toBottomOf="@+id/emailFields" />

    <Button
        android:id="@+id/enviarmerenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="enviar" />

</LinearLayout>