<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormLogin">



    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/loginToolbar"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/khaki"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        tools:ignore="DuplicateIds" />

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="144dp"
        android:text="@string/title_login"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/loginToolbar"
        app:layout_constraintStart_toStartOf="@+id/loginToolbar"
        app:layout_constraintTop_toTopOf="@+id/loginToolbar" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:text="@string/edit_email"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailFields"
        app:layout_constraintStart_toStartOf="@+id/loginToolbar" />

    <EditText
        android:id="@+id/emailFields"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="120dp"

        android:autofillHints=""

        android:background="@color/gray"
        android:ems="12"
        android:hint="@string/edit_email"

        android:importantForAutofill="no"

        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/loginToolbar"
        app:layout_constraintTop_toTopOf="@+id/loginToolbar"

        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:text="@string/edit_password"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordFields"
        app:layout_constraintStart_toStartOf="@+id/loginToolbar" />

    <EditText
        android:id="@+id/passwordFields"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="50dp"

        android:autofillHints=""

        android:background="@color/gray"
        android:ems="12"
        android:hint="@string/edit_password"

        android:importantForAutofill="no"

        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/loginToolbar"
        app:layout_constraintTop_toBottomOf="@+id/emailFields"

        tools:ignore="DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="70dp"
        android:background="@color/Red"
        android:text="@string/bt_logar"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/loginToolbar"
        app:layout_constraintTop_toBottomOf="@+id/passwordFields" />

</androidx.constraintlayout.widget.ConstraintLayout>